<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_name">Shoe Name :</string>
    <string name="enter_shoe_name">Enter shoe Name</string>
    <string name="company">Company :</string>
    <string name="shoe_size">Shoe Size :</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="shoe_size_number">shoe size number</string>
    <string name="please_be_specific">please be specific</string>
    <string name="instructions">instructions</string>
    <string name="it_cannot_be_retrieved">It cannot be retrieved .</string>
    <string name="the_exchange_within_two_weeks">The exchange within two weeks.</string>
    <string name="we_accept_credit_card_payment">We accept credit card payment.</string>
    <string name="we_accept_paypal">We accept PayPal</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="for_men">For men</string>
    <string name="nike_blazer">Nike Blazer</string>
    <string name="nike">Nike</string>
    <string name="_13">13 $</string>
    <string name="nike_air_force1">Nike Air Force1</string>
    <string name="_15">15 $</string>
    <string name="nike_air_max_270">Nike Air Max 270</string>
    <string name="_20">20 $</string>
    <string name="nike_jordan">Nike Jordan</string>
    <string name="_50">50 $</string>
    <string name="lebran18">Lebran18</string>
    <string name="for_basketball">For Basketball</string>
    <string name="submit">submit</string>
    <string name="we_are_not_the_only_ones_but_we_are_the_best">We are not the only ones, but we are the best</string>
    <string name="welcome">Welcome</string>
    <string name="shoe_list">Shoe List</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="shoename">shoeName :</string>
</resources>
